# cuda_optimize

./: CMakeLists.txt  README.md  t.cpp  test.py  test1.cpp
bank_conflict/: CMakeLists.txt  bank.md  test.cu
conv/: README.md
flashAtten/: CMakeLists.txt  FA.cpp  README.md  Transformer.py  beanch.py  flashAtten.cu  flashAtten_v1.cu
float4/: CMakeLists.txt  float4.cu
gemm/: CMakeLists.txt  GEMM.md  MY_MUL_cublas_v1.cpp  MY_MUL_cublas_v2.cpp  README.md  a.out  gemm6_double_buffer.cu  gemm7_my_no_BC.cu  gemm7_no_BC_Li.cu  gemm7_no_BC_z_order.cu  gemm7_no_bankConf.cu  gemm_12.cu  gemm_2.cu  gemm_3.cu  gemm_4.cu  gemm_4_2D_register.cu  gemm_4_block1Dtile.cu  gemm_4_block2Dtile.cu  gemm_5.cu  gemm_5_float4.cu  gemm_6.cu  gemm_7.cu  gemm_8.cu  gemm_9.cu  helper.h  main.cpp  parameters.h  z_lishaoxia_gemm.cu
histogram/: README.md  histogram.cu
reduce/: CMakeLists.txt  README.md  reduction copy.cu  reduction.cu
reduce_nvidia/: CMakeLists.txt  README.md  reduction.cpp  reduction_kernel.cu
softmax/: CMakeLists.txt  README.md  softmax.cu
tensorCore/: 1_vec.cu  2_bankC_co.cu  3_async.cu  4_reg.cu  5_prefetch.cu  6_prefetch_opti.cu  7_reshape.cu  8_swizzle.cu  9_ldmatrix.cu  CMakeLists.txt  README.md
transpose/: CMakeLists.txt  README.md  transpose.cu
wmma/: CMakeLists.txt  README.md  wmma.cu
